--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>csb06</h1>
-<p>Student at ETH Zürich, nothing yet.</p>
+<p>CS student at ETH Zürich, nothing yet.</p>
 </body>
 </html>
